# wastickers

./: .gitignore  _wastickers.py  line.py  pyproject.toml  setup.cfg  test_wastickers.py  wasticker.py  wastickers.py
wastickers/: __init__.py  load.py  scrape.py
